Installed KeychainAccess library

--- a/src/Client (iOS)/VibeLight/Podfile
+++ b/src/Client (iOS)/VibeLight/Podfile
@@ -9,6 +9,8 @@ target 'VibeLight' do
   pod 'Moscapsule', :git => 'https://github.com/flightonary/Moscapsule.git'
   pod 'OpenSSL-Universal', '~> 1.0.1.18'
 
+  pod 'KeychainAccess'
+
   target 'VibeLightTests' do
     inherit! :search_paths
     # Pods for testing
